syntax = "proto3";

option go_package = "./pb";

package pb;
 

message OrderInfo  { 
  int64 id  = 1;
  string sn  = 2;    //订单号 
  int64 userId  = 3;     //用户id 
  int32 orderType  = 4;    //订单类型 
  int64 objId  = 5;     //对象id  
  int32 couponId  = 6;    //优惠券ID 
  string title  = 7;    //标题
  string remark  = 8;    //备注
  string orderCode  = 9;    //核销码 
  int32 statusPay  = 10;    //支付状态 
  int32 statusOrder  = 11;    //订单状态 
  int32 status  = 12;    //记录状态   
  int32 price  = 13;    //实付价 
  int32 priceSrc  = 14;    //原价 
}  
  

message AddOrderReq {
  int64 userId  = 1;        //用户id  
  int64 objId  = 2;         //对象id  
  int32 couponId  = 3;      //优惠券ID
  string remark  =4;        //备注 
  int32 price  = 5;         //实付价 
  int32 priceSrc  = 6;      //原价 
  int32 orderType  = 7;     //订单类型 
  string title  = 8;        //标题
}
message AddOrderResp {
  string sn = 1; //订单号
}


message UpdateOrderReq {
  int64 userId  = 1;        //用户id 
  string sn = 2;            //订单号
  string remark  = 3;       //备注
  string orderCode  = 4;    //核销码  
  int32 statusOrder  = 5;   //订单状态 
  int32 status  = 6;        //记录状态  
}

message UpdateOrderResp {
  int64 rows = 1;    //行数 
}


message OrderDetailReq {
  int64 userId  = 1;        //用户id 
  string sn = 2;            //订单号

}
message OrderDetailResp {
  OrderInfo info = 1;
}

message OrderListReq {
  int64   userId  = 1;        //用户id 
  int32   page = 2;
  int32   pageSize = 3;
  string  Search = 4;
}
message OrderListResp {
  repeated OrderInfo list = 1;
}


message UpdatePayStatusReq {
  int64 userId  = 1;        //用户id 
  string sn = 2;            //订单号 
  int32 statusPay  = 3;     //支付状态  
}

message UpdatePayStatusResp {
  int64 rows = 1;    //行数 
}


message UpdateOrderStatusReq {
  int64 userId  = 1;        //用户id 
  string sn = 2;            //订单号 
  int32 statusOrder  = 3;   //订单状态  
}

message UpdateOrderStatusResp {
  int64 rows = 1;         //行数 
}


//service
service order {
    //下订单
    rpc addOrder(AddOrderReq)returns(AddOrderResp);
    //订单详情
    rpc orderDetail(OrderDetailReq)returns(OrderDetailResp);
    //更新订单 
    rpc UpdateOrder(UpdateOrderReq)returns(UpdateOrderResp);
     //更新支付状态 
    rpc UpdatePayStatus(UpdatePayStatusReq)returns(UpdatePayStatusResp);
     //更新订单状态 
    rpc UpdateOrderStatus(UpdateOrderStatusReq)returns(UpdateOrderStatusResp);
    //订单列表
    rpc orderList(OrderListReq)returns(OrderListResp);
}